list view scroll wip

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.6/angular.min.js"></script>
 <script src="app-module.js"></script>
 <script src="users-controller.js"></script>
+<script src="list-view.js"></script>
 <script src="tk-repeat.js"></script>
 <body>
-<div style="background: gray;margin-top: 50px;height: 300px;width: 250px;overflow: auto;" list-view="l in vm.list">
-    <div class="tk-template" style="padding: 25px;">
+<list-view repeater="l in vm.list" style="background: gray;display: block;height: 300px;width: 250px;overflow: auto;">
+    <div style="padding: 25px;">
         {{l.num}}
     </div>
-</div>
+</list-view>
 </body>
 </html>
