--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -19,6 +19,8 @@
 <script src="../../src/list-view.js"></script>
 <script src="../../src/tk-repeat.js"></script>
 <body>
+<button ng-click="vm.unshift()">unshift to list</button>
+<button ng-click="vm.push()">push to list</button>
 <tk-list-view class="tk-list-view" src="l in vm.list" on-click="vm.clicker">
     <div style="padding: 25px;">
 		{{l.num}}  (index {{$index}})
