--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -16,15 +16,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.6/angular.min.js"></script>
 <script src="app-module.js"></script>
 <script src="demo-controller.js"></script>
-<script src="../../src/list-view.js"></script>
-<script src="../../src/tk-repeat.js"></script>
+<script src="../../src/angular-listview-module.js"></script>
+<script src="../../src/angular-listview-directive.js"></script>
+<script src="../../src/tk-repeat-module.js"></script>
+<script src="../../src/tk-repeat-directive.js"></script>
 <body>
 <button ng-click="vm.unshift()">unshift to list</button>
 <button ng-click="vm.push()">push to list</button>
-<tk-list-view class="tk-list-view" src="l in vm.list" on-click="vm.clicker">
+<angular-listview class="tk-list-view" src="item in vm.list" on-click="vm.clicker">
     <div style="padding: 25px;">
-        {{l.num}} (index {{$index}})
+        {{item.num}} (index {{$index}})
     </div>
-</tk-list-view>
+</angular-listview>
 </body>
 </html>
